stretch: created fixed nav bar and set opacity

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,12 @@ p {
   justify-content: space-evenly;
   background-color: #F6F6F6;
   height: 100px;
+  position: fixed;
+  width: 100%;
+  opacity: 0.9;
+  z-index: 1;
+  top: 0;
+  left: 0;
 }
 .navigationbar h1 {
   font-size: 3.8rem;
@@ -182,6 +188,9 @@ p {
   color: black;
   font-size: 1.6rem;
   padding: 0 15px;
+}
+.home {
+  margin-top: 100px;
 }
 .home .intro .headerimg {
   border-radius: 10px;
