--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,12 @@
     justify-content: space-evenly;
     background-color: @nav-bg;
     height: 100px;
+    position: fixed;
+    width: 100%;
+    opacity: 0.9;
+    z-index: 1;
+    top: 0;
+    left: 0;
 
     h1 {
         font-size: 3.8rem;
